samples/_failures_safe/1761348024_7a85b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9183c91f.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_9183c91f.c:167: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9183c91f.c:166:5: error: expected declaration or statement at end of input
  166 |     } else if
      |     ^
